Time Sheet/main/default/objects/TimeSheet_Value__mdt/TimeSheet_Value__mdt.object-meta.xml
<CustomObject>
    <label>TimeSheet Value</label>
    <pluralLabel>TimeSheet Values</pluralLabel>
</CustomObject>