Time Sheet/main/default/objects/TimeSheet_Value__mdt/fields/Locking_record_days__c.field-meta.xml
<CustomField>
    <fullName>Locking_record_days__c</fullName>
    <label>Locking record days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>