Time Sheet/main/default/objects/TimeSheet_Value__mdt/fields/Maximum_Hrs_Per_day__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Hrs_Per_day__c</fullName>
    <label>Maximum Hrs Per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>