Time Sheet/main/default/objects/TimeSheet_Value__mdt/fields/Working_hours_per_day__c.field-meta.xml
<CustomField>
    <fullName>Working_hours_per_day__c</fullName>
    <label>Working hours per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>